# wallets-rebalance-watcher

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: release.yml
proto/: CryptoWalletsManager.proto
src/: app_ctx.rs  lib.rs  main.rs  settings.rs
src/backgroud/: mod.rs  rebalance_timer.rs
src/flows/: get_wallets_to_rebalace.rs  mod.rs
src/grpc_client/: fireblocks_bridge.rs  mod.rs
